--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "chatbot-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://ashishsingh4u.github.io/chatbot-app/",
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
@@ -26,7 +27,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -47,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^3.2.3",
     "mini-css-extract-plugin": "2.4.5"
   }
 }
