--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build",
+    "predeploy": "npm run build -- --deploy-url /chatbot-app/ --base-href /chatbot-app",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
